terraform/vpc.tf
# -- --
# -- define VPC details
resource "aws_vpc" "vpc" {
  cidr_block = var.vpc_cidr
  enable_dns_support = "true"
  enable_dns_hostnames = "true"
  enable_classiclink = "false"
}
